// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/relationalView Comment authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Comment authors have expected urls 1`] = `
Array [
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Comment has body 1`] = `"seems a bit capricious"`;

exports[`plugins/github/relationalView Comment has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
}
`;

exports[`plugins/github/relationalView Comment has url 1`] = `"https://github.com/sourcecred/example-github/pull/5#discussion_r171460198"`;

exports[`plugins/github/relationalView Issue authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Issue authors have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
]
`;

exports[`plugins/github/relationalView Issue comments has expected number of comments 1`] = `8`;

exports[`plugins/github/relationalView Issue comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768850",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576185",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576220",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576248",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576273",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576936",
]
`;

exports[`plugins/github/relationalView Issue has body 1`] = `"This issue references another issue, namely #1"`;

exports[`plugins/github/relationalView Issue has number 1`] = `"2"`;

exports[`plugins/github/relationalView Issue has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred/example-github",
}
`;

exports[`plugins/github/relationalView Issue has title 1`] = `"A referencing issue."`;

exports[`plugins/github/relationalView Issue has url 1`] = `"https://github.com/sourcecred/example-github/issues/2"`;

exports[`plugins/github/relationalView Pull authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Pull authors have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
]
`;

exports[`plugins/github/relationalView Pull comments has expected number of comments 1`] = `1`;

exports[`plugins/github/relationalView Pull comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/5#issuecomment-396430464",
]
`;

exports[`plugins/github/relationalView Pull has body 1`] = `
"@wchargin could you please do the following:
- add a commit comment
- add a review comment requesting some trivial change
- i'll change it
- then approve the pr"
`;

exports[`plugins/github/relationalView Pull has mergedAs 1`] = `
Object {
  "hash": "6d5b3aa31ebb68a06ceb46bbd6cf49b6ccd6f5e6",
  "type": "COMMIT",
}
`;

exports[`plugins/github/relationalView Pull has number 1`] = `"5"`;

exports[`plugins/github/relationalView Pull has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred/example-github",
}
`;

exports[`plugins/github/relationalView Pull has title 1`] = `"This pull request will be more contentious. I can feel it..."`;

exports[`plugins/github/relationalView Pull has url 1`] = `"https://github.com/sourcecred/example-github/pull/5"`;

exports[`plugins/github/relationalView Pull reviews has expected number of reviews 1`] = `2`;

exports[`plugins/github/relationalView Pull reviews have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
  "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100314038",
]
`;

exports[`plugins/github/relationalView RelationalView entity: comments has expected number of them 1`] = `14`;

exports[`plugins/github/relationalView RelationalView entity: comments they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768850",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576185",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576220",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576248",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576273",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
  "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576936",
  "https://github.com/sourcecred/example-github/issues/6#issuecomment-373768442",
  "https://github.com/sourcecred/example-github/issues/6#issuecomment-373768538",
  "https://github.com/sourcecred/example-github/issues/6#issuecomment-385223316",
  "https://github.com/sourcecred/example-github/pull/3#issuecomment-369162222",
  "https://github.com/sourcecred/example-github/pull/5#issuecomment-396430464",
  "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
]
`;

exports[`plugins/github/relationalView RelationalView entity: issues has expected number of them 1`] = `6`;

exports[`plugins/github/relationalView RelationalView entity: issues they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/issues/1",
  "https://github.com/sourcecred/example-github/issues/2",
  "https://github.com/sourcecred/example-github/issues/4",
  "https://github.com/sourcecred/example-github/issues/6",
  "https://github.com/sourcecred/example-github/issues/7",
  "https://github.com/sourcecred/example-github/issues/8",
]
`;

exports[`plugins/github/relationalView RelationalView entity: pulls has expected number of them 1`] = `3`;

exports[`plugins/github/relationalView RelationalView entity: pulls they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/3",
  "https://github.com/sourcecred/example-github/pull/5",
  "https://github.com/sourcecred/example-github/pull/9",
]
`;

exports[`plugins/github/relationalView RelationalView entity: repos has expected number of them 1`] = `1`;

exports[`plugins/github/relationalView RelationalView entity: repos they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github",
]
`;

exports[`plugins/github/relationalView RelationalView entity: reviews has expected number of them 1`] = `2`;

exports[`plugins/github/relationalView RelationalView entity: reviews they have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
  "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100314038",
]
`;

exports[`plugins/github/relationalView RelationalView entity: userlikes has expected number of them 1`] = `2`;

exports[`plugins/github/relationalView RelationalView entity: userlikes they have expected urls 1`] = `
Array [
  "https://github.com/decentralion",
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Repo has name 1`] = `"example-github"`;

exports[`plugins/github/relationalView Repo has owner 1`] = `"sourcecred"`;

exports[`plugins/github/relationalView Repo has url 1`] = `"https://github.com/sourcecred/example-github"`;

exports[`plugins/github/relationalView Repo issues has expected number of issues 1`] = `6`;

exports[`plugins/github/relationalView Repo issues have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/issues/1",
  "https://github.com/sourcecred/example-github/issues/2",
  "https://github.com/sourcecred/example-github/issues/4",
  "https://github.com/sourcecred/example-github/issues/6",
  "https://github.com/sourcecred/example-github/issues/7",
  "https://github.com/sourcecred/example-github/issues/8",
]
`;

exports[`plugins/github/relationalView Repo pulls has expected number of pulls 1`] = `3`;

exports[`plugins/github/relationalView Repo pulls have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/3",
  "https://github.com/sourcecred/example-github/pull/5",
  "https://github.com/sourcecred/example-github/pull/9",
]
`;

exports[`plugins/github/relationalView Review authors has expected number of authors 1`] = `1`;

exports[`plugins/github/relationalView Review authors have expected urls 1`] = `
Array [
  "https://github.com/wchargin",
]
`;

exports[`plugins/github/relationalView Review comments has expected number of comments 1`] = `1`;

exports[`plugins/github/relationalView Review comments have expected urls 1`] = `
Array [
  "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
]
`;

exports[`plugins/github/relationalView Review has body 1`] = `"hmmm.jpg"`;

exports[`plugins/github/relationalView Review has parent 1`] = `
Object {
  "url": "https://github.com/sourcecred/example-github/pull/5",
}
`;

exports[`plugins/github/relationalView Review has state 1`] = `"CHANGES_REQUESTED"`;

exports[`plugins/github/relationalView Review has url 1`] = `"https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899"`;

exports[`plugins/github/relationalView Userlike has login 1`] = `"wchargin"`;

exports[`plugins/github/relationalView Userlike has url 1`] = `"https://github.com/wchargin"`;

exports[`plugins/github/relationalView reference detection references match snapshot 1`] = `
Array [
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2",
    "to": "https://github.com/sourcecred/example-github/issues/1",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/pull/5",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/pull/9",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
    "to": "https://github.com/sourcecred/example-github/issues/6",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768850",
    "to": "https://github.com/sourcecred/example-github/issues/6#issuecomment-373768538",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576185",
    "to": "https://github.com/sourcecred/example-github/pull/5",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576220",
    "to": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576248",
    "to": "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576273",
    "to": "https://github.com/wchargin",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred/example-github/issues/1",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred/example-github/pull/3",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred/example-github/pull/5#discussion_r171460198",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/2#issuecomment-385576920",
    "to": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/issues/6#issuecomment-385223316",
    "to": "https://github.com/sourcecred/example-github/issues/2",
  },
  Object {
    "from": "https://github.com/sourcecred/example-github/pull/3#issuecomment-369162222",
    "to": "https://github.com/sourcecred/example-github/issues/2",
  },
]
`;
